qa-stage-fix-events-update-content-text-alignment
1. Text align made left.
2. Content updated for - Community table.

--- a/pages/events/events-sync.css
+++ b/pages/events/events-sync.css
@@ -9,6 +9,9 @@
     .events__svgicon{
         @apply hidden xmed:grid;
     }
+    .event__description {
+        @apply text-left;
+    }
     .event:nth-child(even) .event__grid-cols{
         @apply grid-cols-minmax-65-35;
         @apply text-right;
